# multi_agent_langgraph

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  story_main.py
adapters/: gpt_adapter.py  phi_adapter.py  sllm_adapter.py
src/adapters/: sllm_adapter.py
src/agents/: base_agent.py  director.py  inspector.py  writer.py
src/custom_agents/: __init__.py  base_agent.py  director.py  inspector.py  writer.py
src/custom_messages/: custom_messages.py
src/custom_states/: state.py
src/custom_tools/: lore_book.py  transfer_tools.py
src/messages/: custom_messages.py
src/nodes/vision/: sllm_node.py  vision_node.py
src/prompts/: director_v1.yaml  director_v2.yaml  inspector_v1.yaml  inspector_v2.yaml  writer_v1.yaml  writer_v2.yaml
src/prompts/vision/: vision_llm_v1.md
src/states/: new_agent.py  state.py
src/story_mas/: graph.py  schemas.py
src/story_mas/tools/: llm.py  retrieval.py
src/tools/: __init__.py  image_classify.py  load_prompt.py  lore_book.py  parser.py
